feat(config): updated configs

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -10,7 +10,7 @@ site:
 metadata:
   title:
     default: 'Анна Гуркович - Репетитор английского языка'
-    template: '%s — Анна Гуркович - Репетитор английского языка'
+    template: '%s - Репетитор английского языка'
   description: "📚 Опытный учитель английского языка с страстью к литературе и помощью студентам в улучшении их языковых навыков."
   robots:
     index: true
